--- a/_includes/widget_templates.html
+++ b/_includes/widget_templates.html
@@ -19,7 +19,7 @@
                         </div>
                         <div class="item--right-column">
                             <a href='{@= release.refDocUrl @}' class="docs-link reference-link">Reference</a>
-                            <a href='{@= release.apiDocUrl @}' class="docs-link api-link">API</a>
+                            {% if release.apiDocUrl %} <a href='{@= release.apiDocUrl @}' class="docs-link api-link">API</a> {% endif %}
                         </div>
                     </div>
                     {@ }); @}
